cluster/infrastructure/postgres/main/network-policy.yaml
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: main-pg-networkpolicy
spec:
  policyTypes:
  - Ingress
  ingress:
  - from:
    - namespaceSelector:
        matchExpressions:
        - key: kubernetes.io/metadata.name
          operator: In
          values:
          - tandoor
          - psono
          - jellyfin
          - cnpg-system
          - authelia
          - healthchecks
          - ntfy
          - glitchtip
          - zyme
          - limes
          - paperless
      podSelector:
        matchExpressions:
        - key: app.kubernetes.io/name
          operator: In
          values:
          - tandoor
          - psono-server
          - audiomuse-ai-worker
          - audiomuse-ai-nvidia-worker
          - audiomuse-ai-flask
          - cloudnative-pg
          - authelia
          - healthchecks
          - ntfy
          - glitchtip
          - zyme
          - limes
          - paperless
          - sonarr
          - radarr
          - lidarr
          - prowlarr
          - bazarr
          - seerr
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: victoria-metrics
    ports:
    - port: 9187
      protocol: TCP
